--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,194 @@
-.gold-text{
+/* Globals */
+body {
+    background: #000;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #ffc442;
+    font-size: 14px;
+}
+
+ul {
+    -webkit-padding-start: 0;
+}
+
+h1 {
+    font-size: 64px;
+}
+
+h2 {
+    font-size: 30px;    
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+p {
+    margin: 0 0 10px;
+}
+
+/* Element IDs */
+
+.default-buttons a {
+    background-color: #ffc442;
+    border: 1px solid transparent;
+    border-color: #ccc;
+    border-radius: 4px;
+    color: #000;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 400;
+    padding: 6px 12px;    
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+.default-buttons a:hover {
+    background-color: #fff;
+}
+
+#layout div {
+    display: inline-block;    
+}
+
+.navmenu {    
+    background-color: rgba(100, 100, 100, 0.2);
+    border: 1px solid;
+    border-color: #fff;
+    border-radius: 4px;
+    list-style: none;
+    max-width: 15%;
+    margin-top: 20px;
+    padding: 0;
+    position: absolute;
+    width: 12em;    
+}
+
+.navmenu li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navmenu a {
+    border-bottom: 1px solid #fff;
+    color: #ffc442;
+    display: block;
+    font-size: 18px;    
+    font-weight: bold;
+    height: 2em;
+    margin: 0;
+    padding: 10px 0px 0px 10px;    
+    text-decoration: none;    
+}
+
+.navmenu ul {
+    margin: 0px;
+}
+
+.navmenu a:hover {
+    background: rgba(100, 100, 100, 0.5);
+    color: #fff;
+    padding-bottom: 8px;
+}
+
+/* main page row*/
+#row {
+    margin: 100px 10px 10px 40px;
+    width: 90%;
+}
+
+#row div {    
+    display: inline-block;    
+    max-width: 25%;
+    min-width: 25%;
+    padding: 20px;     
+}
+
+/* Class Definitions*/
+
+.btn-default {
+    color: #000;
+    background-color: #ffc442;
+    border-color: #ccc;
+}
+
+.content {
+    margin: 0 auto;
+    padding: 0 2em;
+    max-width: 800px;
+    margin-bottom: 50px;
+    line-height: 1.6em;
+}
+
+.gold-text {
+    color: #ffc442;
+}
+
+.jumbotron {
+    background: #ffc442;
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    color: #000;
+    margin-top: 120px;
+    padding-bottom: 40px;
+    padding-top: 40px;
+    width: 100%;
+}
+
+.jumbotron h1 {
+    padding-left: 60px;
+}
+
+.main {
+    margin-left: 14em;
+}
+
+.top-menu {
+    background: #ffc442;
+    margin-bottom: 0px;
+    width: 100%;
+}
+
+.top-menu-buttons a{
+    background-color: #ffc442;
+    border: 2px solid;
+    border-color: #000;
+    border-radius: 4px;
+    color: #000;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 5px;
+    width: 64px;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+.top-menu-buttons a:hover {
+    background-color: #fff;
+}
+
+.blog-post h4 {
+    font-size: 20px;
+    text-decoration: underline;
+}
+
+.blog-post {
+    background: rgba(100, 100, 100, 0.5);
+    border: 1px solid;
+    border-color: #fff;
+    border-radius: 4px;
+    margin-left: 20px;
+    margin-top: 20px;
+    padding-left: 10px;    
+    width: 640px
+}
+
+.hidden > div {
+    display: none;
+}
+
+.visible > div {
+    display: block;
 }
