Adding project details
Filling in some blog posts for a couple projects.
Showing/hiding content based on selected item

--- a/css/default.css
+++ b/css/default.css
@@ -185,6 +185,11 @@ p {
     width: 640px
 }
 
+.blog-post a {
+    color: #ffc442;
+    text-decoration: none;
+}
+
 .hidden > div {
     display: none;
 }
